# openadapt-ml

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: qwen3vl_capture.yaml  qwen3vl_capture_4bit.yaml  qwen3vl_synthetic.yaml  qwen3vl_synthetic_dev.yaml
docs/: GEMINI_GROUNDING_QUICKSTART.md  azure_waa_setup.md  benchmark_integration_plan.md  benchmark_viewer_integration.md  dashboard_architecture.md  design.md  enterprise_integration.md  parquet_export_design.md  prediction_loading_architecture.md  roadmap.md  schema_consolidation_plan.md  state_and_next_steps_qwen_login.md  waa_demo_recording_guide.md
docs/experiments/: demo_conditioned_prompting_results.md
docs/schema/: README.md  episode.schema.json
examples/: demo_retrieval_example.py  retrieval_with_capture.py  train_from_json.py
experiments/qwen_login/: SOM_INVESTIGATION_REPORT.md
openadapt_ml/: config.py
openadapt_ml/benchmarks/: __init__.py  agent.py  azure.py  cli.py  runner.py  vm_monitor.py  waa.py
openadapt_ml/cloud/: lambda_labs.py  local.py
openadapt_ml/datasets/: next_action.py
openadapt_ml/evals/: plot_eval_metrics.py  trajectory_matching.py
openadapt_ml/export/: parquet.py
openadapt_ml/ingest/: __init__.py  synthetic.py
openadapt_ml/models/: qwen_vl.py
openadapt_ml/retrieval/: README.md  USAGE.md  __init__.py  embeddings.py  index.py  retriever.py
openadapt_ml/runtime/: policy.py
scripts/: setup_azure.py
tests/: test_action_parsing.py  test_local_cli.py  test_parquet_export.py  test_retrieval.py  test_training_dummy.py
(+27 files in other folders)
